--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -15,4 +15,4 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd ../pub
-            git clone git@github.com:kchinna/cmsc389T-website.git
+            git clone https://github.com/kchinna/cmsc389T-website.git
